88 reduce memory consumption of the most expensive parsers (#89)
Improve performance and memory consumption